--- a/index.html
+++ b/index.html
@@ -268,16 +268,210 @@
     <div class="container">
         <div class="stock-selector">
             <select class="stock-select" id="stockSelect" onchange="changeStock()">
-                <option value="AKBNK.IS">💰 Akbank (AKBNK)</option>
-                <option value="GARAN.IS">🏦 Garanti BBVA (GARAN)</option>
-                <option value="ISCTR.IS">🏛️ İş Bankası (ISCTR)</option>
-                <option value="THYAO.IS">✈️ Türk Hava Yolları (THYAO)</option>
-                <option value="BIMAS.IS">🛒 BİM (BIMAS)</option>
-                <option value="SAHOL.IS">🏢 Sabancı Holding (SAHOL)</option>
-                <option value="KOZAL.IS">🥇 Koza Altın (KOZAL)</option>
-                <option value="KCHOL.IS">🏭 Koç Holding (KCHOL)</option>
-                <option value="ASELS.IS">🚀 Aselsan (ASELS)</option>
-                <option value="TSKB.IS">🏗️ TSKB (TSKB)</option>
+ <option value="AEFES">AEFES - Anadolu Efes</option>
+<option value="AKBNK">AKBNK - Akbank</option>
+<option value="AKSA">AKSA - Aksa Akrilik</option>
+<option value="ALARK">ALARK - Alarko Holding</option>
+<option value="ARCLK">ARCLK - Arçelik</option>
+<option value="ASELS">ASELS - Aselsan</option>
+<option value="BIMAS">BIMAS - BİM Mağazalar</option>
+<option value="DOHOL">DOHOL - Doğan Holding</option>
+<option value="EKGYO">EKGYO - Emlak Konut</option>
+<option value="ENJSA">ENJSA - Enerjisa</option>
+<option value="EREGL">EREGL - Ereğli Demir Çelik</option>
+<option value="FROTO">FROTO - Ford Otosan</option>
+<option value="GARAN">GARAN - Garanti BBVA</option>
+<option value="GUBRF">GUBRF - Gübretaş</option>
+<option value="HALKB">HALKB - Halkbank</option>
+<option value="ISCTR">ISCTR - İş Bankası</option>
+<option value="KCHOL">KCHOL - Koç Holding</option>
+<option value="KONTR">KONTR - Kontrolmatik</option>
+<option value="KORDS">KORDS - Kordsa</option>
+<option value="KOZAA">KOZAA - Koza Anadolu</option>
+<option value="KOZAL">KOZAL - Koza Altın</option>
+<option value="MGROS">MGROS - Migros</option>
+<option value="OTKAR">OTKAR - Otokar</option>
+<option value="PETKM">PETKM - Petkim</option>
+<option value="PGSUS">PGSUS - Pegasus</option>
+<option value="SAHOL">SAHOL - Sabancı Holding</option>
+<option value="SASA">SASA - Sasa Polyester</option>
+<option value="SISE">SISE - Şişe Cam</option>
+<option value="SKBNK">SKBNK - Şekerbank</option>
+<option value="TAVHL">TAVHL - TAV Havalimanları</option>
+<option value="TCELL">TCELL - Turkcell</option>
+<option value="THYAO">THYAO - Türk Hava Yolları</option>
+<option value="TKFEN">TKFEN - Tekfen Holding</option>
+<option value="TOASO">TOASO - Tofaş</option>
+<option value="TSKB">TSKB - Türkiye Sınai Kalkınma Bankası</option>
+<option value="TTKOM">TTKOM - Türk Telekom</option>
+<option value="TUPRS">TUPRS - Tüpraş</option>
+<option value="ULKER">ULKER - Ülker</option>
+<option value="VAKBN">VAKBN - Vakıfbank</option>
+<option value="VESTL">VESTL - Vestel</option>
+<option value="YKBNK">YKBNK - Yapı Kredi</option>
+<option value="ZOREN">ZOREN - Zorlu Enerji</option>
+<option value="ADANA">ADANA - Adana Çimento</option>
+<option value="AGHOL">AGHOL - Alarko Gayrimenkul</option>
+<option value="AKCNS">AKCNS - Akçansa</option>
+<option value="AKGRT">AKGRT - Akmerkez</option>
+<option value="AKSEN">AKSEN - Aksa Enerji</option>
+<option value="ALBRK">ALBRK - Albaraka Türk</option>
+<option value="ALFAS">ALFAS - Alfa Solar</option>
+<option value="ANHYT">ANHYT - Anadolu Hayat</option>
+<option value="ARENA">ARENA - Arena Bilgisayar</option>
+<option value="ASUZU">ASUZU - Anadolu Isuzu</option>
+<option value="AYGAZ">AYGAZ - Aygaz</option>
+<option value="BAGFS">BAGFS - Bagfaş</option>
+<option value="BASGZ">BASGZ - Başkent Doğalgaz</option>
+<option value="BERA">BERA - Bera Holding</option>
+<option value="BIZIM">BIZIM - Bizim Toptan</option>
+<option value="BLCYT">BLCYT - Bilici Yatırım</option>
+<option value="BRSAN">BRSAN - Borusan Mannesmann</option>
+<option value="BRYAT">BRYAT - Borusan Yatırım</option>
+<option value="BUCIM">BUCIM - Bursa Çimento</option>
+<option value="CANTE">CANTE - Çan2 Termik</option>
+<option value="CCOLA">CCOLA - Coca-Cola İçecek</option>
+<option value="CEMAS">CEMAS - Cemas Doküm</option>
+<option value="CIMSA">CIMSA - Çimsa</option>
+<option value="DEVA">DEVA - Deva Holding</option>
+<option value="DGNMO">DGNMO - Doğanlar Mobilya</option>
+<option value="DOAS">DOAS - Doğuş Otomotiv</option>
+<option value="DURDO">DURDO - Duran Doğan</option>
+<option value="ECILC">ECILC - Ecil Yatırım</option>
+<option value="ECZYT">ECZYT - Eczacıbaşı Yatırım</option>
+<option value="EGEEN">EGEEN - Ege Endüstri</option>
+<option value="EGGUB">EGGUB - Ege Gübre</option>
+<option value="EGPRO">EGPRO - Ege Profil</option>
+<option value="EMNIS">EMNIS - Eminis Ambalaj</option>
+<option value="ENJSA">ENJSA - Enerjisa</option>
+<option value="ENKAI">ENKAI - Enka İnşaat</option>
+<option value="ERBOS">ERBOS - Erbosan</option>
+<option value="EUPWR">EUPWR - Europower</option>
+<option value="FMIZP">FMIZP - F-M İzmit Piston</option>
+<option value="FROTO">FROTO - Ford Otosan</option>
+<option value="GEDIZ">GEDIZ - Gediz Yatırım</option>
+<option value="GENTS">GENTS - Gentas</option>
+<option value="GLYHO">GLYHO - Global Yatırım</option>
+<option value="GOLTS">GOLTS - Göltaş</option>
+<option value="GOZDE">GOZDE - Gözde Girişim</option>
+<option value="GWIND">GWIND - Galata Wind</option>
+<option value="HURGZ">HURGZ - Hürriyet Gzt</option>
+<option value="ICBCT">ICBCT - İçtaş Çimento</option>
+<option value="IDEAS">IDEAS - İdeaş</option>
+<option value="IHEVA">IHEVA - İhlas Ev Aletleri</option>
+<option value="IHGZT">IHGZT - İhlas Gazetecilik</option>
+<option value="IHLAS">IHLAS - İhlas Holding</option>
+<option value="ISDMR">ISDMR - İskenderun Demir Çelik</option>
+<option value="ISGYO">ISGYO - İş GYO</option>
+<option value="ISMEN">ISMEN - İş Menkul</option>
+<option value="IZMDC">IZMDC - İzmir Demir Çelik</option>
+<option value="JANTS">JANTS - Jantsa</option>
+<option value="KAPLM">KAPLM - Kaplamin</option>
+<option value="KARSN">KARSN - Karsan</option>
+<option value="KARTN">KARTN - Kartonsan</option>
+<option value="KARYE">KARYE - Kartal Yeni</option>
+<option value="KCAER">KCAER - Kocaer Çelik</option>
+<option value="KCHOL">KCHOL - Koç Holding</option>
+<option value="KENT">KENT - Kent Gıda</option>
+<option value="KERVT">KERVT - Kerevitaş</option>
+<option value="KLRHO">KLRHO - Kalır Haberleşme</option>
+<option value="KONKA">KONKA - Konka Endüstri</option>
+<option value="KONTR">KONTR - Kontrolmatik</option>
+<option value="KORDS">KORDS - Kordsa</option>
+<option value="KOZAA">KOZAA - Koza Anadolu</option>
+<option value="KOZAL">KOZAL - Koza Altın</option>
+<option value="KSTUR">KSTUR - Kestel Turizm</option>
+<option value="KUTPO">KUTPO - Kutupolu</option>
+<option value="KUYAS">KUYAS - Kuyumas</option>
+<option value="LINK">LINK - Link Bilgisayar</option>
+<option value="LUKSK">LUKSK - Lüks Kadife</option>
+<option value="MAALT">MAALT - Marmaris Altınyunus</option>
+<option value="MAGEN">MAGEN - Margün Enerji</option>
+<option value="MAKTK">MAKTK - Makina Takım</option>
+<option value="MEGAP">MEGAP - Mega Polietilen</option>
+<option value="MEPET">MEPET - Mepet Metro</option>
+<option value="MERCN">MERCN - Mercan Kimya</option>
+<option value="MERKO">MERKO - Merko Gıda</option>
+<option value="MNDRS">MNDRS - Menderes Tekstil</option>
+<option value="MNDTR">MNDTR - Mondi Türkiye</option>
+<option value="MPARK">MPARK - MLP Sağlık</option>
+<option value="MRGYO">MRGYO - Martı Gayrimenkul</option>
+<option value="MRSHL">MRSHL - Marshall</option>
+<option value="MSGYO">MSGYO - Mistral GYO</option>
+<option value="MTRKS">MTRKS - Matriks Bilgi</option>
+<option value="NTHOL">NTHOL - Net Holding</option>
+<option value="NTGAZ">NTGAZ - Naturelgaz</option>
+<option value="NUGYO">NUGYO - Nurol GYO</option>
+<option value="ODAS">ODAS - Odaş Elektrik</option>
+<option value="ORGE">ORGE - Orge Enerji</option>
+<option value="OTKAR">OTKAR - Otokar</option>
+<option value="OYAKC">OYAKC - Oyak Çimento</option>
+<option value="OYYAT">OYYAT - Oyak Yatırım</option>
+<option value="OZRDN">OZRDN - Özerden</option>
+<option value="OZSUB">OZSUB - Özsu Gıda</option>
+<option value="PAGYO">PAGYO - Pasifik GYO</option>
+<option value="PAMEL">PAMEL - Pamel Kimya</option>
+<option value="PAPIL">PAPIL - Papil Yatırım</option>
+<option value="PARSN">PARSN - Parsan</option>
+<option value="PENGD">PENGD - Penguen Gıda</option>
+<option value="PETUN">PETUN - Pınar Et ve Un</option>
+<option value="PNT">PNT - Pınar Su</option>
+<option value="POLHO">POLHO - Polisan Holding</option>
+<option value="PRKAB">PRKAB - Park Elektrik</option>
+<option value="PRKME">PRKME - Park Metrekare</option>
+<option value="PSDTC">PSDTC - Pergamon Status</option>
+<option value="QNBFB">QNBFB - QNB Finansbank</option>
+<option value="QUAGR">QUAGR - Qualigram</option>
+<option value="RALYH">RALYH - Ral Yatırım Holding</option>
+<option value="RAYSG">RAYSG - Ray Sigorta</option>
+<option value="RYSAS">RYSAS - Reysaş Taşımacılık</option>
+<option value="SAHOL">SAHOL - Sabancı Holding</option>
+<option value="SAMAT">SAMAT - Saray Matbaacılık</option>
+<option value="SANKO">SANKO - SANKO Pazarlama</option>
+<option value="SARKY">SARKY - Sarkuysan</option>
+<option value="SASA">SASA - Sasa Polyester</option>
+<option value="SDTTR">SDTTR - SDT Uzay ve Savunma</option>
+<option value="SELEC">SELEC - Selçuk Ecza Deposu</option>
+<option value="SELGD">SELGD - Selçuk Gıda</option>
+<option value="SISE">SISE - Şişe Cam</option>
+<option value="SKBNK">SKBNK - Şekerbank</option>
+<option value="SMART">SMART - Smartiks Yazılım</option>
+<option value="SMRTG">SMRTG - Smart Güneş</option>
+<option value="SNKRN">SNKRN - Senkron Siber</option>
+<option value="SNPAM">SNPAM - Sonera Pamuk</option>
+<option value="SOKM">SOKM - Şok Marketler</option>
+<option value="SONME">SONME - Sonmez Filament</option>
+<option value="SUNTK">SUNTK - Suntek Kimya</option>
+<option value="TATGD">TATGD - Tat Gıda</option>
+<option value="TAVHL">TAVHL - TAV Havalimanları</option>
+<option value="TCELL">TCELL - Turkcell</option>
+<option value="TKFEN">TKFEN - Tekfen Holding</option>
+<option value="TKNSA">TKNSA - Teknosa</option>
+<option value="TMSN">TMSN - Tumosan</option>
+<option value="TOASO">TOASO - Tofaş</option>
+<option value="TRCAS">TRCAS - Turcas Petrol</option>
+<option value="TRGYO">TRGYO - Torunlar GYO</option>
+<option value="TRILC">TRILC - Turk Ilac ve Serum</option>
+<option value="TSKB">TSKB - Türkiye Sınai Kalkınma Bankası</option>
+<option value="TTKOM">TTKOM - Türk Telekom</option>
+<option value="TTRAK">TTRAK - Türk Traktör</option>
+<option value="TUCLK">TUCLK - Tuğçelik Alüminyum</option>
+<option value="TUKAS">TUKAS - Tukasşar</option>
+<option value="TUPRS">TUPRS - Tüpraş</option>
+<option value="ULKER">ULKER - Ülker</option>
+<option value="ULUUN">ULUUN - Ulusoy Un</option>
+<option value="UMPAS">UMPAS - UMPAŞ Holding</option>
+<option value="VAKBN">VAKBN - Vakıfbank</option>
+<option value="VANGD">VANGD - Van Gıda</option>
+<option value="VBTYZ">VBTYZ - VBT Yazılım</option>
+<option value="VERTU">VERTU - Verusaturk</option>
+<option value="VESBE">VESBE - Vestel Beyaz Eşya</option>
+<option value="VESTL">VESTL - Vestel</option>
+<option value="VKING">VKING - Viking Kağıt</option>
+<option value="YKBNK">YKBNK - Yapı Kredi</option>
+<option value="YUNSA">YUNSA - Yünsa</option>
+<option value="ZOREN">ZOREN - Zorlu Enerji</option>
+
             </select>
         </div>
 
